--- a/src/output.css
+++ b/src/output.css
@@ -725,6 +725,10 @@ body {
   margin-top: 1rem;
 }
 
+.mt-11 {
+  margin-top: 2.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -802,12 +806,8 @@ body {
   min-height: 100svh;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-10 {
-  width: 2.5rem;
+.w-1\/4 {
+  width: 25%;
 }
 
 .w-3\/4 {
@@ -852,6 +852,10 @@ body {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .min-w-0 {
@@ -925,6 +929,10 @@ body {
   flex-direction: column-reverse;
 }
 
+.content-center {
+  align-content: center;
+}
+
 .items-center {
   align-items: center;
 }
@@ -971,10 +979,6 @@ body {
 
 .whitespace-nowrap {
   white-space: nowrap;
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .rounded-md {
@@ -1028,10 +1032,6 @@ body {
 .bg-main {
   --tw-bg-opacity: 1;
   background-color: rgb(0 60 71 / var(--tw-bg-opacity, 1));
-}
-
-.bg-muted {
-  background-color: hsl(var(--muted));
 }
 
 .bg-muted\/50 {
